log/build_2024-07-16_14-50-31/recovery_pipeline/stderr.log
  File "/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline/error_responders/perpendicular_alignment_to_doorway_and_speed.py", line 13
    self.execute_recovery_tree_client = ActionClient(self, , 'execute_recovery_tree')
                                                           ^
SyntaxError: invalid syntax

error removing /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info: [Errno 13] Permission denied: '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info/zip-safe'
error removing /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info: [Errno 13] Permission denied: '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info/SOURCES.txt'
error removing /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info: [Errno 13] Permission denied: '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info/PKG-INFO'
error removing /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info: [Errno 13] Permission denied: '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info/dependency_links.txt'
error removing /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info: [Errno 13] Permission denied: '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info/entry_points.txt'
error removing /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info: [Errno 13] Permission denied: '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info/top_level.txt'
error removing /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info: [Errno 13] Permission denied: '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info/requires.txt'
error removing /home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info: [Errno 39] Directory not empty: '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info'
error: [Errno 13] Permission denied: '/home/ollie/ros2_ws/install/recovery_pipeline/lib/python3.10/site-packages/recovery_pipeline-0.0.0-py3.10.egg-info/zip-safe'
